--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,12 @@ repositories {
 	// for more information about repositories.
 }
 
+fabricApi {
+	configureDataGeneration {
+		createSourceSet = true
+	}
+}
+
 loom {
     splitEnvironmentSourceSets()
 
