--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
 fabricApi {
 	configureDataGeneration {
 		createSourceSet = true
+		modId = "lasers-datagen"
 	}
 }
 
@@ -34,18 +35,22 @@ loom {
 		}
 	}
 
-	accessWidenerPath = file("src/main/resources/lasers.accesswidener")
+	accessWidenerPath = file("../../src/main/resources/lasers.accesswidener")
+
+	runConfigs.configureEach {
+		ideConfigGenerated true
+		runDir "../../run"
+	}
 }
 
 dependencies {
 	// To change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	minecraft "com.mojang:minecraft:${property('minecraft_version')}"
+	mappings "net.fabricmc:yarn:${property('yarn_mappings')}:v2"
+	modImplementation "net.fabricmc:fabric-loader:${property('loader_version')}"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${property('fabric_version')}"
 }
 
 processResources {
