--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@
 # against bad commits.
 
 name: build
-on: []
+on: [push]
 
 jobs:
   build:
@@ -27,8 +27,10 @@ jobs:
           distribution: 'microsoft'
       - name: make gradle wrapper executable
         run: chmod +x ./gradlew
+      - name: datagen
+        run: ./gradlew chiseledDatagen
       - name: build
-        run: ./gradlew build
+        run: ./gradlew chiseledBuild
       - name: capture build artifacts
         if: ${{ matrix.java == '21' }} # Only upload artifacts built from latest java
         uses: actions/upload-artifact@v4
